<resources>

    <string name="app_name">just java</string>
    <string name="quantity">quantity</string>
    <string name="order">ORDER</string>
    <string name="_2" translatable="false">2</string>
    <string name="_10" translatable="false">10</string>
    <string name="incriment" translatable="false">+</string>
    <string name="decriment" translatable="false">-</string>
    <string name="order_summary">Order Summary</string>
    <string name="_0" translatable="false">0</string>
    <string name="price"><price></price></string>
    <string name="whipped_cream" translatable="false">Whipped cream</string>
    <string name="toppings" translatable="false">Toppings</string>
    <string name="chocolate" translatable="false">chocolate</string>
    <string name="thank_you">thank you</string>
    <string name="enter_your_name">enter your name</string>
    <string name="you_cannot_coffie_less_then_1">you cannot order coffie less then 1</string>
    <string name="you_cannot_order_coffie_more_then_100">you cannot order coffee more than 100</string>


</resources>