<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="76dp"
                android:text="@string/quantity"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/_2"
            android:textColor="#0B0A0A"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button"
                android:layout_width="145dp"
                android:layout_height="62dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="#333333"
                android:textColorHighlight="#EBEBED"
                android:textColorLink="#F8F2F2"
                android:textSize="24sp"
                app:backgroundTint="#BCB8B8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="52dp"
                android:text="@string/order_summary"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_10"
                android:textColor="#070707"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="348dp"
                android:layout_marginEnd="170dp"
                android:layout_marginRight="170dp"
                android:onClick="incriment"
                android:shadowColor="#955151"
                android:text="@string/incriment"
                android:textColor="#F8F5F5"
                android:textColorHighlight="#B85A5A"
                android:textColorHint="#AA5F5F"
                app:backgroundTint="#787878"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.592"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#4CAF50"
                app:strokeColor="#8A4747" />

            <Button
            android:id="@+id/button6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:onClick="decriment"
            android:text="@string/decriment"
            app:backgroundTint="#7C7979"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="252dp"
            android:layout_marginRight="252dp"
            android:layout_marginBottom="16dp"
            android:text="@string/whipped_cream"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="132dp"
                android:layout_marginEnd="303dp"
                android:layout_marginRight="303dp"
                android:text="@string/toppings"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginEnd="287dp"
                android:layout_marginRight="287dp"
                android:layout_marginBottom="4dp"
                android:text="@string/chocolate"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="29dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="169dp"
                android:layout_marginRight="169dp"
                android:layout_marginBottom="31dp"
                android:ems="10"
                android:hint="enter your name"
                android:inputType="textCapWords"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>